--- a/Cinematch-Mobile/mobile.css
+++ b/Cinematch-Mobile/mobile.css
@@ -214,6 +214,11 @@ body.mobile {
   margin-bottom: 12px;
 }
 
+button.remover-foto {
+  background: #334155;
+  color: #E5E7EB;
+}
+
 /* ======================
    MODAL
 ====================== */
@@ -255,3 +260,4 @@ body.mobile {
   cursor: pointer;
   font-size: 20px;
 }
+
